# reference-manageer

./: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migration/src/: lib.rs  m20230423_160022_init.rs  tables.rs
src-tauri/src/: commands.rs  main.rs
src-tauri/src/commands/: local_storage.rs  metadata.rs  setup.rs
src-tauri/src/entities/: mod.rs  paper.rs  prelude.rs
src/routes/: +layout.svelte  +page.server.ts  +page.ts
src/routes/documents/: +page.svelte
